Upgrade to Java 22 (#49)
* Upgrade to Java 22

* Revise

* Remove string template as it is still a preview feature

* Source option is now the default and has been removed

* Exclude timer

* Regenerate bindings

* Add load library

* Revise according to the newly generated bindings

* Revise according to the newly generated bindings

* Revise the run code section

* Use the long option names

* Delete library option

* new includes with latest jextract

* new bindings with latest jextract

* Add loadLibrary

* Add the other SuiteSparse definitions

* Regenerate bindings

* Add loadLibrary

* Exclude fflush_nolock and fflush_unlocked

* Regenerate includes and bindings

* Add loadLibrary

* Exclude SuiteSparse

* Regenerate includes and bindings

* Add loadLibrary

* Remove SuiteSparse macros

* Revert "Remove SuiteSparse macros"

This reverts commit 2bfffb82435804f3a4560a6879cf4fcbb2d30921.

* Remove platform dependent C_LONG